PORT-4 Create view

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -17,12 +17,14 @@ COM_PROJECTS_MENU_TODOS = "Планировщик"
 COM_PROJECTS_MENU_NOTIFY = "УВЕДОМЛЕНИЯ: %s шт"
 COM_PROJECTS_MENU_SCORES = "Счета"
 COM_PROJECTS_MENU_STAT = "Статистика"
+COM_PROJECTS_MENU_STATV2 = "Статистика"
 COM_PROJECTS_MENU_STAT_DESC = "Отчёт по проданному оборудованию"
 COM_PROJECTS_MENU_REPORTS = "Отчёты"
 COM_PROJECTS_MENU_REPORTS_DESC = "Генерация отчётов"
 COM_PROJECTS_MENU_PAYMENTS = "Платежи"
 COM_PROJECTS_MENU_BUILDING = "Застройка"
 COM_PROJECTS_MENU_CATALOG = "Каталог продаж"
+COM_PROJECTS_MENU_CATALOGS = "Каталог продаж"
 COM_PROJECTS_MENU_CATTITLES = "Названия каталогов"
 COM_PROJECTS_MENU_TEMPLATES = "Шаблоны"
 COM_PROJECTS_MENU_EVENTS = "Действия пользователей"
@@ -31,6 +33,8 @@ COM_PROJECTS_MENU_HOTEL = "Отель"
 COM_PROJECTS_MENU_RUBRICS = "Рубрики"
 COM_PROJECTS_MENU_RUBRIC = "Рубрика"
 COM_PROJECTS_MENU_SEARCH="Поиск"
+COM_PROJECTS_MENU_USERCLICKS="Статистика кликов"
+COM_PROJECTS_MENU_USERCLICKS_DESC="Статистика использования сайдбара"
 COM_PROJECTS_MENU_SEARCH_DESC="Глобальный поиск по системе"
 COM_PROJECTS_MENU_HOTEL_CATS = "Категории номеров"
 COM_PROJECTS_MENU_HOTEL_CAT = "Категория номера"
@@ -289,6 +293,8 @@ COM_PROJECTS_TITLE_EDIT_STAND = "Изменить стенд"
 COM_PROJECTS_TITLE_EDIT_STAND_INTO_CATALOG = "Изменить стенд в каталоге"
 COM_PROJECTS_TITLE_EDIT_PERSON = "Изменить контакт"
 COM_PROJECTS_TITLE_NEW_SCORE = "Новый счёт"
+COM_PROJECTS_HEAD_MENU_ITEM="Пункт меню"
+COM_PROJECTS_HEAD_MENU_ITEM_CLICKS_COUNT="Количество кликов"
 COM_PROJECTS_HEAD_OLD_NAME = "Старое название"
 COM_PROJECTS_HEAD_VARIANTS = "Вариант"
 COM_PROJECTS_HEAD_NEW_NAME = "Новое название"
