PORT-12 Доработка отчёта по статусам сделок - гипперссылки

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -151,12 +151,14 @@ COM_PROJECTS_FILTER_SELECT_FULL_ORDERING = "Сортировка"
 COM_PROJECTS_FILTER_SELECT_FULL_ORDERING_DESC = "Глобальная сортировка"
 COM_PROJECTS_FILTER_SELECT_AUTHOR = " - Кто добавил - "
 COM_PROJECTS_FILTER_SELECT_DOC_STATUS = " - Статус документов - "
+COM_PROJECTS_FILTER_SELECT_TODOS_COUNT = " - Количество задач - "
 COM_PROJECTS_FILTER_SORT_NAME_ASC = "По названию (возраст.)"
 COM_PROJECTS_FILTER_SORT_NAME_DESC = "По названию (убыв.)"
 COM_PROJECTS_FILTER_SORT_ID_ASC = "По ID (возраст.)"
 COM_PROJECTS_FILTER_SORT_ID_DESC = "По ID (убыв.)"
 COM_PROJECTS_FILTER_SORT_CITY_ASC = "По городу (возраст.)"
 COM_PROJECTS_FILTER_SORT_CITY_DESC = "По городу (убыв.)"
+COM_PROJECTS_FILTER_WITHOUT_DESC = "Без активных задач"
 COM_PROJECTS_BLANK_PROJECT = "Параметры проекта"
 COM_PROJECTS_BLANK_PROJECT_CATALOGS = "Каталог стендов"
 COM_PROJECTS_BLANK_PLAN = "Параметры планировки"
@@ -250,6 +252,8 @@ COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_RUBRIC = "Фильтр по тема
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_RUBRIC_DESC = "Отображать ли фильтр по тематическим рубрикам"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_STATUS = "Фильтр по статусам договора"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_STATUS_DESC = "Отображать ли фильтр по статусам договора"
+COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_CWT = "Фильтр по количеству задач"
+COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_CWT_DESC = "Отображать ли фильтр по количеству активных задач"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS = "Колонки"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS_PARENT = "Родитель"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS_PARENT_DESC = "Отображать ли колонку с наименованием родителя соэкспонента"
@@ -296,6 +300,7 @@ COM_PROJECTS_TITLE_EDIT_STAND = "Изменить стенд"
 COM_PROJECTS_TITLE_EDIT_STAND_INTO_CATALOG = "Изменить стенд в каталоге"
 COM_PROJECTS_TITLE_EDIT_PERSON = "Изменить контакт"
 COM_PROJECTS_TITLE_NEW_SCORE = "Новый счёт"
+COM_PROJECTS_HEAD_CONTRACTS_WITHOUT_TODOS = "Без задач"
 COM_PROJECTS_HEAD_MANAGER_STAT_MANAGER = "Менеджер"
 COM_PROJECTS_HEAD_MANAGER_STAT_DYNAMIC = "Динамика"
 COM_PROJECTS_HEAD_MANAGER_STAT_COMPANIES = "Комп. в раб."
