--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -31,6 +31,7 @@ COM_PROJECTS_MENU_HOTEL = "Отель"
 COM_PROJECTS_MENU_RUBRICS = "Рубрики"
 COM_PROJECTS_MENU_RUBRIC = "Рубрика"
 COM_PROJECTS_MENU_MANAGER_STAT="Менеджеры - статусы сделок"
+COM_PROJECTS_REPORT_TITLE="Персональные статусы работ над проектом"
 COM_PROJECTS_MENU_SEARCH="Поиск"
 COM_PROJECTS_MENU_SEARCH_DESC="Глобальный поиск по системе"
 COM_PROJECTS_MENU_HOTEL_CATS = "Категории номеров"
