--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -30,6 +30,8 @@ COM_PROJECTS_MENU_HOTELS = "Отели"
 COM_PROJECTS_MENU_HOTEL = "Отель"
 COM_PROJECTS_MENU_RUBRICS = "Рубрики"
 COM_PROJECTS_MENU_RUBRIC = "Рубрика"
+COM_PROJECTS_MENU_MANAGER_STAT="Менеджеры - статусы сделок"
+COM_PROJECTS_REPORT_TITLE="Персональные статусы работ над проектом"
 COM_PROJECTS_MENU_SEARCH="Поиск"
 COM_PROJECTS_MENU_SEARCH_DESC="Глобальный поиск по системе"
 COM_PROJECTS_MENU_HOTEL_CATS = "Категории номеров"
@@ -117,6 +119,12 @@ COM_PROJECTS_FILTER_SELECT_PRICE_IMPORT = " - Импортировать из - 
 COM_PROJECTS_FILTER_SELECT_SECTION = " - Выберите раздел - "
 COM_PROJECTS_FILTER_SELECT_CONTRACT = " - Выберите сделку - "
 COM_PROJECTS_FILTER_SELECT_MANAGER = " - Выберите менеджера - "
+COM_PROJECTS_FILTER_SELECT_DYNAMIC = " - Выберите динамику - "
+COM_PROJECTS_FILTER_SELECT_DYNAMIC_DAY = "День"
+COM_PROJECTS_FILTER_SELECT_DYNAMIC_WEEK = "Неделя"
+COM_PROJECTS_FILTER_SELECT_DYNAMIC_MONTH = "Месяц"
+COM_PROJECTS_FILTER_SELECT_DYNAMIC_YEAR = "Год"
+COM_PROJECTS_FILTER_SELECT_DATE = " - Выберите дату - "
 COM_PROJECTS_FILTER_SELECT_STATUS = " - Выберите статус - "
 COM_PROJECTS_FILTER_SELECT_ITEM = " - Выберите пункт прайса - "
 COM_PROJECTS_FILTER_SELECT_STATUS_TODO = " - Выберите статус задачи - "
@@ -144,12 +152,14 @@ COM_PROJECTS_FILTER_SELECT_FULL_ORDERING = "Сортировка"
 COM_PROJECTS_FILTER_SELECT_FULL_ORDERING_DESC = "Глобальная сортировка"
 COM_PROJECTS_FILTER_SELECT_AUTHOR = " - Кто добавил - "
 COM_PROJECTS_FILTER_SELECT_DOC_STATUS = " - Статус документов - "
+COM_PROJECTS_FILTER_SELECT_TODOS_COUNT = " - Количество задач - "
 COM_PROJECTS_FILTER_SORT_NAME_ASC = "По названию (возраст.)"
 COM_PROJECTS_FILTER_SORT_NAME_DESC = "По названию (убыв.)"
 COM_PROJECTS_FILTER_SORT_ID_ASC = "По ID (возраст.)"
 COM_PROJECTS_FILTER_SORT_ID_DESC = "По ID (убыв.)"
 COM_PROJECTS_FILTER_SORT_CITY_ASC = "По городу (возраст.)"
 COM_PROJECTS_FILTER_SORT_CITY_DESC = "По городу (убыв.)"
+COM_PROJECTS_FILTER_WITHOUT_DESC = "Без активных задач"
 COM_PROJECTS_BLANK_PROJECT = "Параметры проекта"
 COM_PROJECTS_BLANK_PROJECT_CATALOGS = "Каталог стендов"
 COM_PROJECTS_BLANK_PLAN = "Параметры планировки"
@@ -243,6 +253,8 @@ COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_RUBRIC = "Фильтр по тема
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_RUBRIC_DESC = "Отображать ли фильтр по тематическим рубрикам"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_STATUS = "Фильтр по статусам договора"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_STATUS_DESC = "Отображать ли фильтр по статусам договора"
+COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_CWT = "Фильтр по количеству задач"
+COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_CWT_DESC = "Отображать ли фильтр по количеству активных задач"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS = "Колонки"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS_PARENT = "Родитель"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS_PARENT_DESC = "Отображать ли колонку с наименованием родителя соэкспонента"
@@ -289,6 +301,12 @@ COM_PROJECTS_TITLE_EDIT_STAND = "Изменить стенд"
 COM_PROJECTS_TITLE_EDIT_STAND_INTO_CATALOG = "Изменить стенд в каталоге"
 COM_PROJECTS_TITLE_EDIT_PERSON = "Изменить контакт"
 COM_PROJECTS_TITLE_NEW_SCORE = "Новый счёт"
+COM_PROJECTS_HEAD_CONTRACTS_WITHOUT_TODOS = "Без задач"
+COM_PROJECTS_HEAD_MANAGER_STAT_MANAGER = "Менеджер"
+COM_PROJECTS_HEAD_MANAGER_STAT_DYNAMIC = "Динамика"
+COM_PROJECTS_HEAD_MANAGER_STAT_COMPANIES = "Комп. в раб."
+COM_PROJECTS_HEAD_MANAGER_STAT_PLAN = "План"
+COM_PROJECTS_HEAD_MANAGER_STAT_DIFF = "Разнца"
 COM_PROJECTS_HEAD_OLD_NAME = "Старое название"
 COM_PROJECTS_HEAD_VARIANTS = "Вариант"
 COM_PROJECTS_HEAD_NEW_NAME = "Новое название"
@@ -814,15 +832,20 @@ COM_PROJECTS_HEAD_CONTRACT_NUMBER_HINT = "Рекомендуется не изм
 COM_PROJECTS_HEAD_CONTRACT_STATUS = "Статус сделки"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_DESC = "Статус заключения сделки"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_0 = "Отказ"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_0_SHORT = "Отказ"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_1 = "Договор"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_1_SHORT = "Дог."
 COM_PROJECTS_HEAD_CONTRACT_STATUS_2 = "Направлено приглашение"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_2_SHORT = "Напр. пригл."
 COM_PROJECTS_HEAD_CONTRACT_STATUS_3 = "Планируют участие"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_3_SHORT = "План. уч."
 COM_PROJECTS_HEAD_CONTRACT_STATUS_4 = "Заявка на участие"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_4_SHORT = "Заявка"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_5 = "Соэкспонент"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_6 = "Демоцентр"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_7 = "Выбор подрядчика"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_8 = "Подрядчик"
-COM_PROJECTS_HEAD_CONTRACT_STATUS_9 = "Некоммерческий"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_9_SHORT = "Некомм."
 COM_PROJECTS_HEAD_CONTRACT_STATUS_10 = "Счёт"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_PARENT = "Родитель"
 COM_PROJECTS_HEAD_CONTRACT_AMOUNT_SUM = "Сумма договоров: %s руб., %s долл., %s евро"
