PORT-20 Отчёт по количеству задач менеджеров

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -31,7 +31,9 @@ COM_PROJECTS_MENU_HOTEL = "Отель"
 COM_PROJECTS_MENU_RUBRICS = "Рубрики"
 COM_PROJECTS_MENU_RUBRIC = "Рубрика"
 COM_PROJECTS_MENU_MANAGER_STAT="Менеджеры - статусы сделок"
+COM_PROJECTS_MENU_MANAGER_TASKS="Менеджеры - задачи"
 COM_PROJECTS_REPORT_TITLE="Персональные статусы работ над проектом"
+COM_PROJECTS_REPORT_TITLE_TASKS="Персональные задачи менеджеров"
 COM_PROJECTS_MENU_SEARCH="Поиск"
 COM_PROJECTS_MENU_SEARCH_DESC="Глобальный поиск по системе"
 COM_PROJECTS_MENU_HOTEL_CATS = "Категории номеров"
@@ -307,6 +309,10 @@ COM_PROJECTS_HEAD_MANAGER_STAT_DYNAMIC = "Динамика"
 COM_PROJECTS_HEAD_MANAGER_STAT_COMPANIES = "Комп. в раб."
 COM_PROJECTS_HEAD_MANAGER_STAT_PLAN = "План"
 COM_PROJECTS_HEAD_MANAGER_STAT_DIFF = "Разнца"
+COM_PROJECTS_HEAD_MANAGER_TASKS_TODOS_EXPIRES = "Просроч."
+COM_PROJECTS_HEAD_MANAGER_TASKS_TODOS_PLAN = "Текущ."
+COM_PROJECTS_HEAD_MANAGER_TASKS_TODOS_FUTURE = "Будущ."
+COM_PROJECTS_HEAD_MANAGER_TASKS_TODOS_COMPLETED = "Заверш."
 COM_PROJECTS_HEAD_OLD_NAME = "Старое название"
 COM_PROJECTS_HEAD_VARIANTS = "Вариант"
 COM_PROJECTS_HEAD_NEW_NAME = "Новое название"
