--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -30,6 +30,7 @@ COM_PROJECTS_MENU_HOTELS = "Отели"
 COM_PROJECTS_MENU_HOTEL = "Отель"
 COM_PROJECTS_MENU_RUBRICS = "Рубрики"
 COM_PROJECTS_MENU_RUBRIC = "Рубрика"
+COM_PROJECTS_MENU_MANAGER_STAT_TITLE="Отчёт по статусам сделок"
 COM_PROJECTS_MENU_MANAGER_STAT="Менеджеры - статусы сделок"
 COM_PROJECTS_MENU_MANAGER_TASKS="Менеджеры - задачи"
 COM_PROJECTS_REPORT_TITLE="Персональные статусы работ над проектом"
