City in building from setting

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -229,6 +229,11 @@ COM_PROJECTS_GO_CREATE_STAND = "В добавление стенда"
 COM_PROJECTS_GO_CREATE_SCORE = "Выставить счёт"
 COM_PROJECTS_GO_FIND_CONTRACTS = "Найти сделки"
 COM_PROJECTS_GO_PARENT_COMPANY = "Перейти в родительскую компанию"
+COM_PROJECTS_USER_SETTINGS_BUILDING_CONTENT = "Контент таблицы"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY = "Город (юр.)"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_DESC = "Отображать город из юридического адреса"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_FACT = "Город (факт.)"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_FACT_DESC = "Отображать город из фактического адреса"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_CONTENT = "Контент таблицы"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_CONTENT_LIST_LIMIT = "Количество строк на странице"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_CONTENT_LIST_LIMIT_DESC = "Количество строк, которые будут отображаться на странице за один запрос"
