Company's address in settings

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -234,6 +234,10 @@ COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY = "Город (юр.)"
 COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_DESC = "Отображать город из юридического адреса"
 COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_FACT = "Город (факт.)"
 COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_CITY_FACT_DESC = "Отображать город из фактического адреса"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR = "Адрес (факт.)"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR_DESC = "Отображать адрес из фактического адреса"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR_FACT = "Адрес (факт.)"
+COM_PROJECTS_USER_SETTINGS_BUILDING_SHOW_ADDR_FACT_DESC = "Отображать адрес из фактического адреса"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_CONTENT = "Контент таблицы"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_CONTENT_LIST_LIMIT = "Количество строк на странице"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_CONTENT_LIST_LIMIT_DESC = "Количество строк, которые будут отображаться на странице за один запрос"
