Error when save contract with status code 4 and without stand

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -985,6 +985,7 @@ COM_PROJECTS_ERROR_EMPTY_DATE = "Передана пустая дата"
 COM_PROJECTS_ERROR_UNKNOWN_ID = "Не удалось идентифицировать строку"
 COM_PROJECTS_ERROR_UNKNOWN_NOT_TRANSFER = "Не удалось изменить колонку"
 COM_PROJECTS_ERROR_CANT_EDIT_STAND_TYPE_AND_ITEM = "Нельзя изменить одновременно и стенд, и пункт прайс-листа, к которому он привязан. Для этого удалите этот стенд и добаьте новый"
+COM_PROJECTS_ERROR_SAVE_CONTRACT_NOT_STAND = "Нельзя сохранить сделку со статусом Заявка на участие, так как к ней не привязан ни один стенд. Привяжите стенд во вкладке Стенды и сохраните сделку"
 COM_PROJECTS_TABLE_ERROR_RECORD_STORE = "Ошибка сохранения записи"
 COM_PROJECTS_TABLE_ERROR_RECORD_BLOCKED = "Запись уже редактируется другим менеджером"
 COM_PROJECTS_TABLE_ERROR_NOT_LOAD_DATA = "Не удалось получить данные"
