--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -1021,6 +1021,8 @@ COM_PROJECT_TASK_CHANGE_CONTRACT_STATUS = "У договора с экспоне
 COM_PROJECT_TASK_NEW_PAYMENT = "По договору №%s внесён платёж на сумму %s"
 COM_PROJECT_TASK_CHECK_SCORE = "Сумма платежей по счёту №%s превышает сумму счёта на %s %s"
 COM_PROJECT_TASK_VALUE_EDIT = "У компании %s по проекту %s значение пункта %s изменилось с %s до %s"
+COM_PROJECT_TASK_ASSIGNED_TO_ME = "Перевести на меня"
+COM_PROJECT_TASK_CONTRACTS_ASSIGNED = "Сделки переведены на вашу учётную запись"
 COM_PROJECT_QUEST_REMOVE_EXHIBITOR = "Вы уверены, что хотите удалить экспонента? Удалятся все сделки, в которых участвует экспонент!"
 COM_PROJECT_QUEST_REMOVE_CONTRACT = "Вы уверены, что хотите удалить сделку? Удалятся все задания, заказанные услуги, стенды, счета и платежи, в которых участвует эта сделка! Также удалятся все соэкспоненты, которые есть у этой сделки!"
 COM_PROJECT_QUEST_REMOVE_PAYMENTS = "Вы уверены, что хотите удалить платёж?"
