Correct dynamic for report task_by_dates

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -1014,6 +1014,7 @@ COM_PROJECT_TASK_STAND_DG_ADDED = "В договор №%s добавлен ст
 COM_PROJECT_TASK_STAND_SD_EDITED = "В сделке №%s стенд №%s заменён на стенд №%s"
 COM_PROJECT_TASK_STAND_DG_EDITED = "В договоре №%s стенд №%s заменён на стенд №%s"
 COM_PROJECT_TASK_COLUMN_EDITED = "Колонка изменена"
+COM_PROJECT_TASK_REFRESH = "Обновить"
 COM_PROJECT_TASK_LIMIT_NOT_ENQ = "Количество элементов, заданое в настройках внешнего вида, отличается от выбранного. Применено значение из настроек."
 COM_PROJECT_TASK_STAND_DG_CATALOG_EDITED = "У стенда №%s в договоре %s с экспонентом %s по проекту %s изменена площадь с %s кв. м. на %s кв. м."
 COM_PROJECT_TASK_STAND_SD_CATALOG_EDITED = "У стенда №%s в сделке с экспонентом %s по проекту %s изменена площадь с %s кв. м. на %s кв. м."
