--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -33,7 +33,7 @@ COM_PROJECTS_MENU_RUBRIC = "Рубрика"
 COM_PROJECTS_MENU_MANAGER_STAT_TITLE="Отчёт по статусам сделок"
 COM_PROJECTS_MENU_MANAGER_STAT="Менеджеры - статусы сделок"
 COM_PROJECTS_MENU_MANAGER_TASKS="Менеджеры - задачи"
-COM_PROJECTS_REPORT_TITLE="Персональные статусы работ над проектом"
+COM_PROJECTS_REPORT_TITLE="Отчёт по статусам сделок"
 COM_PROJECTS_REPORT_TITLE_TASKS="Персональные задачи менеджеров"
 COM_PROJECTS_MENU_SEARCH="Поиск"
 COM_PROJECTS_MENU_SEARCH_DESC="Глобальный поиск по системе"
@@ -865,6 +865,7 @@ COM_PROJECTS_HEAD_CONTRACT_STATUS_9 = "Некоммерческий"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_9_SHORT = "Некомм."
 COM_PROJECTS_HEAD_CONTRACT_STATUS_10 = "Счёт"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_-1 = "В проекте"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_-1_SHORT = "В проекте"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_-1_DESC = "В проекте"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_PARENT = "Родитель"
 COM_PROJECTS_HEAD_CONTRACT_AMOUNT_SUM = "Сумма договоров: %s руб., %s долл., %s евро"
