Report tasks by dates

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.sys.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.sys.ini
@@ -13,7 +13,7 @@ COM_PROJECTS_MENU_REPORTS_DESC="Генерация отчётов"
 COM_PROJECTS_REPORT_TYPE_BY_SALES="Отчёт по менеджерам (планировщик по датам)"
 COM_PROJECTS_REPORT_TYPE_BY_SQUARES="Отчёт по площадям"
 COM_PROJECTS_REPORT_TYPE_BY_PASS="Отчёт по пропускам"
-COM_PROJECTS_MENU_MANAGER_STAT="Менеджеры - статусы сделок"
+COM_PROJECTS_MENU_MANAGER_STAT="Отчёт по менеджерам - статусы сделок"
 COM_PROJECTS_MENU_MANAGER_TASKS="Менеджеры - статусы сделок"
 COM_PROJECTS_MENU_PAYMENTS="Платежи"
 COM_PROJECTS_MENU_SCORES="Счета"
@@ -29,7 +29,8 @@ COM_PROJECTS_MENU_PROJECTS_DESC="Список проектов"
 COM_PROJECTS_MENU_SECTIONS_DESC="Список разделов прайс-листов"
 COM_PROJECTS_MENU_CONTRACTS_DESC="Список договоров"
 COM_PROJECTS_MENU_CONTRACTS_V2_DESC="Новая верия списка сделок"
-COM_PROJECTS_MENU_MANAGER_STAT_DESC="Результаты работы менеджеров - статусы сделок"
+COM_PROJECTS_MENU_MANAGER_STAT_DESC="Отчёт по менеджерам - статусы сделок"
+COM_PROJECTS_REPORT_TYPE_TASKS_BY_DATES = "Отчёт по планировщику - план на будущую неделю"
 COM_PROJECTS_MENU_MANAGER_TASKS_DESC="Результаты работы менеджеров - статусы сделок"
 COM_PROJECTS_MENU_PAYMENTS_DESC="Список платежей"
 COM_PROJECTS_MENU_BUILDING_DESC="Данные о застройке"
