Report tasks_current_week

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -908,9 +908,10 @@ COM_PROJECTS_HEAD_MANAGER_ADD = "Кто добавил"
 COM_PROJECTS_HEAD_MANAGER_UNKNOWN = "Неизвестно"
 COM_PROJECTS_HEAD_MANAGER_DESC = "Выберите менеджера экспонента"
 COM_PROJECTS_REPORT_TYPE_BY_EXHIBITORS = "Отчёт по экспонентам"
-COM_PROJECTS_REPORT_TYPE_BY_MANAGERS = "Отчёт по менеджерам (статусы сделок)"
+COM_PROJECTS_REPORT_TYPE_BY_MANAGERS = "Отчёт по менеджерам - статусы сделок"
 COM_PROJECTS_REPORT_TYPE_TODOS_BY_DATES = "Отчёт по планировщику по датам"
 COM_PROJECTS_REPORT_TYPE_TASKS_BY_DATES = "Отчёт по планировщику - план на будущую неделю"
+COM_PROJECTS_REPORT_TYPE_TASKS_CURRENT_WEEK = "Отчёт по планировщику - результаты текущей недели"
 COM_PROJECTS_REPORT_TYPE_SQUARES = "Отчёт по площадям"
 COM_PROJECTS_REPORT_TYPE_PASS = "Отчёт по пропускам"
 COM_PROJECTS_ACCESS_MANAGER = "Назначать руководителя"
