--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.sys.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.sys.ini
@@ -31,6 +31,7 @@ COM_PROJECTS_MENU_CONTRACTS_DESC="Список договоров"
 COM_PROJECTS_MENU_CONTRACTS_V2_DESC="Новая верия списка сделок"
 COM_PROJECTS_MENU_MANAGER_STAT_DESC="Отчёт по менеджерам - статусы сделок"
 COM_PROJECTS_REPORT_TYPE_TASKS_BY_DATES = "Отчёт по планировщику - план на будущую неделю"
+COM_PROJECTS_REPORT_TYPE_TASKS_CURRENT_WEEK = "Отчёт по планировщику - результаты текущей недели"
 COM_PROJECTS_MENU_MANAGER_TASKS_DESC="Результаты работы менеджеров - статусы сделок"
 COM_PROJECTS_MENU_PAYMENTS_DESC="Список платежей"
 COM_PROJECTS_MENU_BUILDING_DESC="Данные о застройке"
