Filter by country

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -155,6 +155,7 @@ COM_PROJECTS_FILTER_SELECT_FULL_ORDERING = "Сортировка"
 COM_PROJECTS_FILTER_SELECT_FULL_ORDERING_DESC = "Глобальная сортировка"
 COM_PROJECTS_FILTER_SELECT_AUTHOR = " - Кто добавил - "
 COM_PROJECTS_FILTER_SELECT_DOC_STATUS = " - Статус документов - "
+COM_PROJECTS_FILTER_SELECT_COUNTRY = " - Выберите страну - "
 COM_PROJECTS_FILTER_SELECT_TODOS_COUNT = " - Количество задач - "
 COM_PROJECTS_FILTER_SORT_NAME_ASC = "По названию (возраст.)"
 COM_PROJECTS_FILTER_SORT_NAME_DESC = "По названию (убыв.)"
@@ -267,6 +268,8 @@ COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_STATUS = "Фильтр по стат
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_STATUS_DESC = "Отображать ли фильтр по статусам договора"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_CWT = "Фильтр по количеству задач"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_CWT_DESC = "Отображать ли фильтр по количеству активных задач"
+COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_COUNTRY = "Фильтр по стране"
+COM_PROJECTS_USER_SETTINGS_CONTRACTS_FILTER_COUNTRY_DESC = "Отображать ли фильтр по стране"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS = "Колонки"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS_PARENT = "Родитель"
 COM_PROJECTS_USER_SETTINGS_CONTRACTS_COLUMNS_PARENT_DESC = "Отображать ли колонку с наименованием родителя соэкспонента"
