Advanced fields in report by exhibitors

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -666,6 +666,7 @@ COM_PROJECTS_HEAD_EXP_CONTACT_ADDR_FACT_STREET_HINT = "Тверская ул."
 COM_PROJECTS_HEAD_EXP_CONTACT_ADDR_FACT_HOME = "Факт. адрес, дом"
 COM_PROJECTS_HEAD_EXP_CONTACT_ADDR_FACT_HOME_DESC = "Факт. адрес, дом"
 COM_PROJECTS_HEAD_EXP_CONTACT_ADDR_FACT_HOME_HINT = "10 корп. 1 офис 224"
+COM_PROJECTS_HEAD_EXP_CONTACT_PHONES = "Телефоны"
 COM_PROJECTS_HEAD_EXP_CONTACT_PHONE_1 = "Тел. 1"
 COM_PROJECTS_HEAD_EXP_CONTACT_PHONE_1_DESC = "Телефон №1"
 COM_PROJECTS_HEAD_EXP_CONTACT_PHONE_COMMENT = "Комментарий к тел."
