--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -740,7 +740,7 @@ COM_PROJECTS_HEAD_CONTRACT_GENERAL_UNDEFINED = "Руководитель не н
 COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP = "Проектная группа"
 COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP_DESC = "Выберите проектную группу менеджеров проекта"
 COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP_UNDEFINED = "Проектная группа не назначена"
-COM_PROJECTS_HEAD_CONTRACT_RUBRICS = "Тематики"
+COM_PROJECTS_HEAD_CONTRACT_RUBRICS = "Тематические рубрики проекта"
 COM_PROJECTS_HEAD_CONTRACT_RUBRICS_DESC = "Тематики из проектного рубрикатора"
 COM_PROJECTS_HEAD_PRICE_LIST = "Прайс-лист"
 COM_PROJECTS_HEAD_PRICE_COLUMN = "Ценовая колонка"
