--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -11,6 +11,7 @@ COM_PROJECTS_MENU_SECTIONS = "Разделы прайс-листов"
 COM_PROJECTS_MENU_CFIELDS = "Поля"
 COM_PROJECTS_MENU_CFIELDS_GROUPS = "Группы полей"
 COM_PROJECTS_MENU_ACTIVITIES = "Виды деятельности"
+COM_PROJECTS_MENU_IN_CONTRACT_ACTIVITIES = "Виды деятельности КОМПАНИИ"
 COM_PROJECTS_MENU_CONTRACTS = "Сделки и договоры (стар.)"
 COM_PROJECTS_MENU_CONTRACTS_V2 = "Сделки и договоры (нов.)"
 COM_PROJECTS_MENU_TODOS = "Планировщик"
@@ -740,7 +741,7 @@ COM_PROJECTS_HEAD_CONTRACT_GENERAL_UNDEFINED = "Руководитель не н
 COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP = "Проектная группа"
 COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP_DESC = "Выберите проектную группу менеджеров проекта"
 COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP_UNDEFINED = "Проектная группа не назначена"
-COM_PROJECTS_HEAD_CONTRACT_RUBRICS = "Тематические рубрики проекта"
+COM_PROJECTS_HEAD_CONTRACT_RUBRICS = "Тематические рубрики ПРОЕКТА"
 COM_PROJECTS_HEAD_CONTRACT_RUBRICS_DESC = "Тематики из проектного рубрикатора"
 COM_PROJECTS_HEAD_PRICE_LIST = "Прайс-лист"
 COM_PROJECTS_HEAD_PRICE_COLUMN = "Ценовая колонка"
