New contract's statuses

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -870,6 +870,8 @@ COM_PROJECTS_HEAD_CONTRACT_STATUS_8 = "Подрядчик"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_9 = "Некоммерческий"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_9_SHORT = "Некомм."
 COM_PROJECTS_HEAD_CONTRACT_STATUS_10 = "Счёт"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_11 = "Соэкспонент"
+COM_PROJECTS_HEAD_CONTRACT_STATUS_12 = "Соэкспонент (без оплаты)"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_-1 = "В проекте"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_-1_SHORT = "В проекте"
 COM_PROJECTS_HEAD_CONTRACT_STATUS_-1_DESC = "В проекте"
