--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -376,15 +376,15 @@ COM_PROJECTS_HEAD_PERSON_POST_HINT = "Генеральный директор"
 COM_PROJECTS_HEAD_PERSON_PHONE_WORK = "Рабочий телефон"
 COM_PROJECTS_HEAD_PERSON_PHONE_WORK_SHORT = "Раб. тел.: %s"
 COM_PROJECTS_HEAD_PERSON_PHONE_WORK_DESC = "Рабочий контакта"
-COM_PROJECTS_HEAD_PERSON_PHONE_WORK_HINT = "+74951234567 (доб. 1234)"
+COM_PROJECTS_HEAD_PERSON_PHONE_WORK_HINT = "+7 (495) 123-45-67 (доб. 1234)"
 COM_PROJECTS_HEAD_PERSON_PHONE_WORK_ADDITIONAL = "Добавочный"
 COM_PROJECTS_HEAD_PERSON_PHONE_WORK_ADDITIONAL_SHORT = "Доб.: %s"
 COM_PROJECTS_HEAD_PERSON_PHONE_WORK_ADDITIONAL_DESC = "Добавочный номер телефона"
-COM_PROJECTS_HEAD_PERSON_PHONE_WORK_ADDITIONAL_HINT = "1234"
+COM_PROJECTS_HEAD_PERSON_PHONE_WORK_ADDITIONAL_HINT = "12-34"
 COM_PROJECTS_HEAD_PERSON_PHONE_MOBILE = "Мобильный телефон"
 COM_PROJECTS_HEAD_PERSON_PHONE_MOBILE_SHORT = "Моб. тел.: %s"
 COM_PROJECTS_HEAD_PERSON_PHONE_MOBILE_DESC = "Мобильный контакта"
-COM_PROJECTS_HEAD_PERSON_PHONE_MOBILE_HINT = "+74951234567 (доб. 1234)"
+COM_PROJECTS_HEAD_PERSON_PHONE_MOBILE_HINT = "+7 (495) 123-45-67"
 COM_PROJECTS_HEAD_PERSON_EMAIL = "Электронная почта"
 COM_PROJECTS_HEAD_PERSON_EMAIL_DESC = "EMail контакта"
 COM_PROJECTS_HEAD_PERSON_EMAIL_HINT = "mail@example.com"
