Forms in catalog fields

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -211,6 +211,7 @@ COM_PROJECTS_BLANK_TEMPLATE = "Параметры шаблона"
 COM_PROJECTS_BLANK_TEMPLATES = "Шаблоны"
 COM_PROJECTS_BLANK_NOTIFY = "Уведомление"
 COM_PROJECTS_BLANK_FINANSES = "Финансы"
+COM_PROJECTS_BLANK_CATALOG = "Каталог"
 COM_PROJECTS_BLANK_SCORE = "Параметры счёта"
 COM_PROJECTS_BLANK_ACTIVE_PROJECTS = "Активные сделки"
 COM_PROJECTS_BLANK_SUCCESS_PROJECTS = "Завершённые сделки"
@@ -759,6 +760,20 @@ COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP_DESC = "Выберите проектн
 COM_PROJECTS_HEAD_CONTRACT_PROJECT_GROUP_UNDEFINED = "Проектная группа не назначена"
 COM_PROJECTS_HEAD_CONTRACT_RUBRICS = "Тематические рубрики ПРОЕКТА"
 COM_PROJECTS_HEAD_CONTRACT_RUBRICS_DESC = "Тематики из проектного рубрикатора"
+COM_PROJECTS_HEAD_CONTRACT_INFO_CATALOG = "Информация в каталог"
+COM_PROJECTS_HEAD_CONTRACT_INFO_CATALOG_DESC = "Компания прислала информацию для каталога"
+COM_PROJECTS_HEAD_CONTRACT_LOGO_CATALOG = "Лого в каталог"
+COM_PROJECTS_HEAD_CONTRACT_LOGO_CATALOG_DESC = "Компания прислала логотип для каталога"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1 = "Форма №1"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1_DESC = "Компания прислала заполненную форму №1"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1A = "Форма №1А"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1A_DESC = "Компания прислала заполненную форму №1А"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1B = "Форма №1Б"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1B_DESC = "Компания прислала заполненную форму №1Б"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1V = "Форма №1В"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1V_DESC = "Компания прислала заполненную форму №1В"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1G = "Форма №1Г"
+COM_PROJECTS_HEAD_CONTRACT_PVN_1G_DESC = "Компания прислала заполненную форму №1Г"
 COM_PROJECTS_HEAD_PRICE_LIST = "Прайс-лист"
 COM_PROJECTS_HEAD_PRICE_COLUMN = "Ценовая колонка"
 COM_PROJECTS_HEAD_PRICE_COLUMN_N = "Колонка %d"
