Incoming forms in report by exhibitors

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -966,6 +966,7 @@ COM_PROJECTS_HEAD_THEMATIC_RUBRICS_DESC = "Тематические рубрик
 COM_PROJECTS_HEAD_CONTRACT_PREFIX = "Префикс номеров договора"
 COM_PROJECTS_HEAD_CONTRACT_PREFIX_DESC = "Если это поле не пустое, этот префикс будет добавляться ко всем номерам договора"
 COM_PROJECTS_HEAD_CONTRACT_PREFIX_HINT = "АР5-"
+COM_PROJECTS_HEAD_INCOMING_FORMS = "Формы"
 COM_PROJECTS_HEAD_DATE_END = "Окончание"
 COM_PROJECTS_HEAD_DATE_END_DESC = "Окончание работы проекта"
 COM_PROJECTS_HEAD_FILE = "Файл"
