--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -232,7 +232,7 @@ COM_PROJECTS_BLANK_TEMPLATE = "Параметры шаблона"
 COM_PROJECTS_BLANK_TEMPLATES = "Шаблоны"
 COM_PROJECTS_BLANK_NOTIFY = "Уведомление"
 COM_PROJECTS_BLANK_FINANSES = "Финансы"
-COM_PROJECTS_BLANK_CATALOG = "Каталог"
+COM_PROJECTS_BLANK_CATALOG = "Формы в каталог"
 COM_PROJECTS_BLANK_SCORE = "Параметры счёта"
 COM_PROJECTS_BLANK_ACTIVE_PROJECTS = "Активные сделки"
 COM_PROJECTS_BLANK_SUCCESS_PROJECTS = "Завершённые сделки"
