Arrival info and no exhibit fields

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -809,6 +809,10 @@ COM_PROJECTS_HEAD_CONTRACT_PVN_1V = "Форма №1В"
 COM_PROJECTS_HEAD_CONTRACT_PVN_1V_DESC = "Компания прислала заполненную форму №1В"
 COM_PROJECTS_HEAD_CONTRACT_PVN_1G = "Форма №1Г"
 COM_PROJECTS_HEAD_CONTRACT_PVN_1G_DESC = "Компания прислала заполненную форму №1Г"
+COM_PROJECTS_HEAD_CONTRACT_NO_EXHIBIT = "Нет экспонатов"
+COM_PROJECTS_HEAD_CONTRACT_NO_EXHIBIT_DESC = "У компании нет экспонатов"
+COM_PROJECTS_HEAD_CONTRACT_INFO_ARRIVAL = "График заезда"
+COM_PROJECTS_HEAD_CONTRACT_INFO_ARRIVAL_DESC = "Прислали график заезда"
 COM_PROJECTS_HEAD_PRICE_LIST = "Прайс-лист"
 COM_PROJECTS_HEAD_PRICE_COLUMN = "Ценовая колонка"
 COM_PROJECTS_HEAD_PRICE_COLUMN_N = "Колонка %d"
