Invites info in contract

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -187,6 +187,12 @@ COM_PROJECTS_FILTER_SORT_ID_DESC = "По ID (убыв.)"
 COM_PROJECTS_FILTER_SORT_CITY_ASC = "По городу (возраст.)"
 COM_PROJECTS_FILTER_SORT_CITY_DESC = "По городу (убыв.)"
 COM_PROJECTS_FILTER_WITHOUT_DESC = "Без активных задач"
+COM_PROJECTS_FORM_CONTRACT_INVITE_DATE_LABEL="Дата отправки приглашения"
+COM_PROJECTS_FORM_CONTRACT_INVITE_DATE_DESC="Дата, когда компании было выслано приглашение"
+COM_PROJECTS_FORM_CONTRACT_OUTGOING_NUMBER_LABEL="Исходящий номер"
+COM_PROJECTS_FORM_CONTRACT_OUTGOING_NUMBER_DESC="Исходящий номер приглашения"
+COM_PROJECTS_FORM_CONTRACT_INCOMING_NUMBER_LABEL="Входящий номер"
+COM_PROJECTS_FORM_CONTRACT_INCOMING_NUMBER_DESC="Входящий номер приглашения"
 COM_PROJECTS_BLANK_PROJECT = "Параметры проекта"
 COM_PROJECTS_BLANK_PROJECT_CATALOGS = "Каталог стендов"
 COM_PROJECTS_BLANK_PLAN = "Параметры планировки"
@@ -232,7 +238,7 @@ COM_PROJECTS_BLANK_TEMPLATE = "Параметры шаблона"
 COM_PROJECTS_BLANK_TEMPLATES = "Шаблоны"
 COM_PROJECTS_BLANK_NOTIFY = "Уведомление"
 COM_PROJECTS_BLANK_FINANSES = "Финансы"
-COM_PROJECTS_BLANK_CATALOG = "Формы в каталог"
+COM_PROJECTS_BLANK_CATALOG_SENT = "Формы в каталог и приглашения"
 COM_PROJECTS_BLANK_SCORE = "Параметры счёта"
 COM_PROJECTS_BLANK_ACTIVE_PROJECTS = "Активные сделки"
 COM_PROJECTS_BLANK_SUCCESS_PROJECTS = "Завершённые сделки"
