Filter by no_exhibit

--- a/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
+++ b/administrator/components/com_projects/language/ru-RU/ru-RU.com_projects.ini
@@ -165,6 +165,9 @@ COM_PROJECTS_FILTER_SELECT_INFO_CATALOG_1 = "Инфо в каталог есть
 COM_PROJECTS_FILTER_SELECT_LOGO_CATALOG = " - Лого в каталог - "
 COM_PROJECTS_FILTER_SELECT_LOGO_CATALOG_0 = "Лого в каталог нет"
 COM_PROJECTS_FILTER_SELECT_LOGO_CATALOG_1 = "Лого в каталог есть"
+COM_PROJECTS_FILTER_SELECT_EXPONENTS="- Выберите экспонаты -"
+COM_PROJECTS_FILTER_SELECT_EXPONENTS_WITHOUT="Без экспонатов"
+COM_PROJECTS_FILTER_SELECT_EXPONENTS_WITH="С экспонатами"
 COM_PROJECTS_FILTER_SELECT_PNV_1 = " - Форма №1 - "
 COM_PROJECTS_FILTER_SELECT_PNV_1_0 = "Формы №1 нет"
 COM_PROJECTS_FILTER_SELECT_PNV_1_1 = "Форма №1 есть"
